force-app/main/default/objects/Site_Visit_Availability__c/Site_Visit_Availability__c.object-meta.xml
<CustomObject>
    <label>Site Visit Availability</label>
    <nameField>
        <label>Site Visit Availability Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Site Visit Availabilities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>