force-app/main/default/objects/Site_Visit_Availability__c/fields/Available_Slots__c.field-meta.xml
<CustomField>
    <fullName>Available_Slots__c</fullName>
    <label>Available Slots</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>10:00 AM to 11:00 AM</fullName>
            </value>
            <value>
                <fullName>11:00 AM to 12:00 PM</fullName>
            </value>
            <value>
                <fullName>12:00 PM to 01:00 PM</fullName>
            </value>
            <value>
                <fullName>02:00 PM to 03:00 PM</fullName>
            </value>
            <value>
                <fullName>03:00 PM to 04:00 PM</fullName>
            </value>
            <value>
                <fullName>04:00 PM to 05:00 PM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>