force-app/main/default/objects/Site_Visit_Availability__c/fields/Sales_Rep__c.field-meta.xml
<CustomField>
    <fullName>Sales_Rep__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Sales Rep</label>
    <referenceTo>Team_Member__c</referenceTo>
    <relationshipLabel>Site Visit Availabilities</relationshipLabel>
    <relationshipName>Site_Visit_Availabilities</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>